feat: add CLI interface for managing authors, collections, and books